[tool.poetry]
name = "stage-1"
version = "0.1.0"
description = ""
authors = ["Ademola Balogun <balotech514@gmail.com>"]
readme = "README.md"
packages = [{include = "stage_1"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
